# systemd-swap

./: .gitignore  Cargo.toml  README.md  systemd-swap  systemd-swap.service
src/: main.rs
